# mm-audio-api

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  NOTES.md  README.md  create_thunderstore_package.py  make_python_functions.py  mod.toml  recomp_user_compilers.json  thumb.dds  zig_toolchain.cmake
.github/workflows/: thunderstore-and-github-release.yml
cmake/: tmp.cmake  zig-toolchain-aarch64-macos-none.cmake  zig-toolchain-x86_64-linux-gnu.cmake  zig-toolchain-x86_64-windows-gnu.cmake
include/audio_api/: all.h  audio_api.h  base.h  cseq.h  porcelain.h  samplebank.h  sequence.h  soundfont.h  types.h
include/core/: audio_cmd.h  cseq.h  effects.h  heap.h  init.h  load.h  load_status.h  sequence_functions.h  soundfont.h
include/extlib/: bridge.h  lib_recomp.hpp  main.hpp  thread.hpp  utils.hpp
include/extlib/decoder/: abstract.hpp  flac.hpp  metadata.hpp  mp3.hpp  opus.hpp  vorbis.hpp  wav.hpp
include/mod/: recomp_incbin.h
include/shared/: achievements.h  audioapi.h  native_bridge.h
include/utils/: dynamicdataarray.h  misc.h  queue.h
include_in_dependents/: audio_api.h  cseq.h
src/: audio_api.c  audio_cmd.c  audio_cmd.h  audio_load.c  audio_load.h  cseq.c  cseq.h  debug.c  heap.c  init.c  load.c  load.h  queue.c  queue.h  seqplayer.c  sequence.c  sequence_flags.c  sequence_functions.c  sequence_functions.h  soundfont.c  soundfont.h  synthesis.c  test.c  util.c  util.h
src/audio/: Rick-Roll-Sound-Effect.xxd
src/core/: audio_cmd.c  cseq.c  effects.c  heap.c  init.c  load.c  load_status.c  samplebank.c  seqplayer.c  sequence.c  sequence_functions.c  soundfont.c  synthesis.c
src/extlib/: CMakeLists.txt  lib_main.cpp  main.cpp  main.hpp  rom.cpp  thread.cpp  util.h  utils.cpp
src/mod/: audio_api.c  audio_cmd.c  audio_cmd.h  cseq.c  cseq.h  dma.c  dynamicdataarray.c  effects.c  effects.h  heap.c  heap.h  init.c  init.h  load.c  load.h  load_status.c  load_status.h  queue.c  seqplayer.c  sequence.c  sequence_functions.c  sequence_functions.h  soundfont.c  soundfont.h  synthesis.c  test.c  util.c  util.h
src/porcelain/: audiofile.c  resource.c
src/test/: attack1.raw  attack2.raw  attack3.raw  rickroll32kHz.raw
src/utils/: dynamicdataarray.c  misc.c  queue.c
tools/: thunderstore.py
(+64 files in other folders)
